Hard-code dependent crate feature flags
When we generate bindings, we generate bindings across the API
surface of whatever features we had set. Thus, any generated
bindings are specific to the features we had set and it doesn't
make sense to have features on the `lightning-c-bindings` crate as
setting the wrong one will simply lead to a compilation failure.

Instead, here we hard-code the features in the dependencies section
of `Cargo.toml`.

Sadly, because we want to take an optional `core2` dependency, we
can't quite fully drop the `lightning-c-bindings` features
entirely, but after upgrading to rust-bitcoin 0.32 we should be
able to.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           # Note that the version tags aren't checked into git
           touch src/version.rs
-          RUSTFLAGS="--cfg=c_bindings" cargo check --features std
+          RUSTFLAGS="--cfg=c_bindings" cargo check
       - name: Install cbindgen
         run: |
           git clone https://github.com/eqrion/cbindgen
@@ -94,7 +94,7 @@ jobs:
         run: |
           # Note that the version tags aren't checked into git
           touch src/version.rs
-          RUSTFLAGS="--cfg=c_bindings" cargo check --features std
+          RUSTFLAGS="--cfg=c_bindings" cargo check
       - name: Install cbindgen
         run: |
           git clone https://github.com/eqrion/cbindgen
